# OCaml_Game_Of_Life

./: dune-project  game_of_life.opam
lib/: dune
test/: dune
